<resources>
	<string name="app_name">Next Gen</string>
	<string name="google_maps_key">01ArUv7t4d2JL6vK6MzLGrLkeF9hoTcsanAqWKQ</string>
	<string name="input_login_dialog">Please enter a valid password!</string>
	<string name="user_name_is_empty">Please enter a valid username!</string>
	<string name="accounts">Accounts</string>
	<string name="fun_stuff">Fun Stuff</string>
	<string name="movie_lists">Movie Lists</string>
	<string name="collection">Collection</string>
	<string name="collection_new">Start Your Online Movie Collection</string>
	<string name="watch_movies">NEW: Watch movies on Flixster!</string>
	<string name="wts">Movies I Want To See</string>
	<string name="rated">Movies I\'ve Rated</string>
	<string name="netflix_dvd">Netflix DVD Queue</string>
	<string name="netflix_instant">Netflix Instant Queue</string>
	<string name="recent_friend_ratings">Recent Friend Ratings</string>
	<string name="settings">Settings</string>
	<string name="preferences">Preferences</string>
	<string name="settings_and_more">Settings and More</string>
	<string name="top_actors">Top Actors</string>
	<string name="top_photos">Top Photos</string>
	<string name="Top_This_Week">Top This Week</string>
	<string name="Favorites">Favorites</string>
	<string name="Go">Go</string>
	<string name="dialog_sortselect_movies">Sort Movies</string>
	<string name="label_synopsis"><b>Synopsis:</b></string>
	<string name="label_rated"><b>Rated:</b></string>
	<string name="label_runningtime"><b>Running Time:</b></string>
	<string name="label_theater_releasedate"><b>Theater Release:</b></string>
	<string name="location">Location</string>
	<string name="label_date">Showtimes Date</string>
	<string name="select_showtime">Select Showtime</string>
	<string name="label_dvd_releasedate"><b>DVD Release:</b></string>
	<string name="label_browse">Browse</string>
	<string name="label_load_more_reviews">Load more reviews...</string>
	<string name="label_show_all_reviews">Show all reviews...</string>
	<string name="label_load_more_want_to_see">Load more want to see...</string>
	<string name="label_commingsoon">Coming Soon</string>
	<string name="label_new_releases">New Releases</string>
	<string name="label_top_actress_photos">Actresses</string>
	<string name="label_top_actor_photos">Actors</string>
	<string name="label_top_movie_photos">Movies</string>
	<string name="label_random">Random</string>
	<string name="label_Director">Director</string>
	<string name="settings_facebook">Facebook</string>
	<string name="settings_flixster">Flixster</string>
	<string name="settings_netflix">Netflix</string>
	<string name="settings_cache_header">SD Cache Policy</string>
	<string name="label_Cast">Cast</string>
	<string name="watch_trailer">Play Trailer</string>
	<string name="get_showtimes">Get Showtimes</string>
	<string name="photos">Photos</string>
	<string name="add_rating">Add My Rating</string>
	<string name="my_rating">My Rating</string>
	<string name="view_photos">View Photos</string>
	<string name="label_genre"><b>Genre:</b></string>
	<string name="settings_location_header">Location</string>
	<string name="settings_distance">Theater Search Distance</string>
	<string name="settings_movieratings_header">Movie Ratings</string>
	<string name="label_moviedetails">Movie Info</string>
	<string name="label_showtimes">Showtimes</string>
	<string name="label_zip">Postal Code:</string>
	<string name="Search">Search</string>
	<string name="label_ok">OK</string>
	<string name="label_cancel">Cancel</string>
	<string name="label_imdb">IMDb</string>
	<string name="label_rottentomatoes">Rotten Tomatoes</string>
	<string name="label_flixster">Flixster</string>
	<string name="critic_footer_title">Ratings by Rotten Tomatoes</string>
	<string name="critic_footer_title_flixster">Ratings by Flixster</string>
	<string name="settings_header_tellafriend">Tell A Friend</string>
	<string name="settings_header_ratethisapp">Rate This App</string>
	<string name="settings_header_faq">Frequently Asked Questions</string>
	<string name="settings_header_feedback">Send Us Your Feedback</string>
	<string name="url_critic">http://rottentomatoes.com</string>
	<string name="settings_footer">Copyright \u00a9 2014 Flixster, Inc. All rights reserved.</string>
	<string name="current_location">Use Current Location *</string>
	<string name="current_location_message">* Turn \'Use Current Location\' On, to always show the theaters closest to your current location</string>
	<string name="label_no_showtimes_found">No showtimes found</string>
	<string name="label_no_theaters_found">No theaters found</string>
	<string name="label_cachepolicy">Cache Policy</string>
	<string name="label_moviereviews">Movie Review</string>
	<string name="fresh">Fresh (60% or more critics rated the movie positively)</string>
	<string name="rotten">Rotten (59% or fewer critics rated the movie positively)</string>
	<string name="popcorn_wts">Percent of Flixster users who want to see the movie</string>
	<string name="popcorn_like">60% or more Flixster users rated the movie favorably</string>
	<string name="popcorn_spilled">59% or fewer Flixster users rated the movie favorably</string>
	<string name="login_flixster">Flixster Account Login</string>
	<string name="login_flixster_text">Login to your Flixster.com account to view your ratings and see your friends ratings.</string>
	<string name="label_username">Username</string>
	<string name="label_password">Password</string>
	<string name="label_register">Register</string>
	<string name="label_log_in">Log in</string>
	<string name="label_reg">Sign up</string>
	<string name="label_forgot">Forgot your password?</string>
	<string name="connect_header">Connect with Facebook</string>
	<string name="connect_flixster">or login with Flixster</string>
	<string name="connect_rate">Rate and review movies!</string>
	<string name="connect_rate_save">Save your ratings and reviews.</string>
	<string name="connect_rate_share">Share your ratings with your friends.</string>
	<string name="connect_rate_post">Post reviews to your news feed (optional)</string>
	<string name="map_theaters">Map Theaters</string>
	<string name="my_ratings_title">My Ratings</string>
	<string name="my_wts_title">Movies I Want To See</string>
	<string name="my_rated_title">Movies I\'ve Rated</string>
	<string name="my_friends_title">My Friends</string>
	<string name="my_collection_title">My Movie Collection</string>
	<string name="my_collection_title_count">My Movie Collection (%d)</string>
	<string name="my_collection_offlineAlert">You don\'t seem to have an Internet connection, but you can still watch downloaded movies in your collection.</string>
	<string name="unfulfillable_description_singular">1 movie not yet available on Flixster</string>
	<string name="unfulfillable_description_plural">%d movies not yet available on Flixster</string>
	<string name="unfulfillable_title">Not Yet Available</string>
	<string name="unfulfillable_header_not_available">Unavailable for streaming and download</string>
	<string name="unfulfillable_header_learn_more">Learn more</string>
	<string name="unfulfillable_not_available">The following movies in your collection are not yet available for streaming or download on Flixster.</string>
	<string name="unfulfillable_learn_more">&lt;a href="http://flixster.desk.com/customer/portal/articles/478091-why-can-t-i-watch-all-of-my-ultraviolet-movies-on-flixster-">Learn more&lt;/a></string>
	<string name="unfulfillable_tap_below">Tap a movie below to go to an alternate streaming provider:</string>
	<string name="unfulfillable_statement_title">General Statement Regarding Fox and Paramount U.V. Titles in Flixster:</string>
	<string name="unfulfillable_statement_text">We are currently engaged in ongoing licensing discussions with both Fox and Paramount regarding access to their 
        UltraViolet-enabled films through Flixster and we hope the issue will be resolved in short order. In the meantime, Fox\'s and Paramount\'s UltraViolet titles 
        will continue to be visible in the user\'s Flixster collection. If the user clicks on the title to view it, Flixster will automatically link the user to the 
        VUDU site so that he or she can access the film. Once we have resolved the licensing issues, the user\'s Fox and Paramount content will be viewable directly 
        through Flixster.</string>
	<string name="episode_offlineAlert">You don\'t seem to have an Internet connection, but you can still watch downloaded episodes in your collection.</string>
	<string name="user_profile_title">User Profile</string>
	<string name="rate_reviewhint">Add a Review (optional)</string>
	<string name="label_load_movies">Load more movies...</string>
	<string name="label_load_friend_activity">More Friend Activity...</string>
	<string name="label_total_movies">movies total</string>
	<string name="label_total_reviews">%d reviews total</string>
	<string name="profile_friends">Friends</string>
	<string name="profile_ratings">Ratings</string>
	<string name="profile_wts">Want To See</string>
	<string name="profile_collected">Collected</string>
	<string name="promo_friends_left">View your friends\' reviews</string>
	<string name="promo_wts_1">Just tap the Add Rating button on any movie page</string>
	<string name="promo_wts_2">Tap the Want To See button</string>
	<string name="promo_wts_3">View your movie list!</string>
	<string name="no_ratings">You have not rated any movies yet.</string>
	<string name="no_user_ratings">has not rated any movies yet.</string>
	<string name="no_friends">You have no friends yet.</string>
	<string name="friend">friend</string>
	<string name="friends">friends</string>
	<string name="friend_rating">friend rating</string>
	<string name="friend_ratings">friend ratings</string>
	<string name="friend_ratings_header">Friend Ratings</string>
	<string name="want_to_see">want to see</string>
	<string name="friend_want_to_see">friend wants to see</string>
	<string name="select_friends_title">Select Friends</string>
	<string name="select_friends_description">Selected friends will be invited via SMS.\nPlease confirm on the next screen and press back to return to Flixster.</string>
	<string name="select_friends_movies">gift movies</string>
	<string name="select_friends_more">(%d more to earn another movie)</string>
	<string name="menu_home">Home</string>
	<string name="menu_movie">Movie</string>
	<string name="menu_actor">Actor</string>
	<string name="menu_info">Info</string>
	<string name="menu_share">Share</string>
	<string name="menu_save">Save</string>
	<string name="advertisement">Advertisement</string>
	<string name="visit">visit</string>
	<string name="skip">skip</string>
    <string name="redeem_redeemBtn">Redeem Code</string>
    <string name="uv_promo_header">Enhance Your Collection with UltraViolet</string>
    <string name="uv_promo_body">With UltraViolet, your movies and TV shows will always be with you to instantly stream and download on your favorite devices. And now share your collection with 5 additional family members.</string>
    <string name="uv_promo_footer">Link your Flixster and UltraViolet accounts now!</string>
    <string name="uv_unfulfillable_header">Unavailable for Streaming and Downloading</string>
    <string name="uv_unfulfillable_body">Movies that have not yet been made available for streaming and downloading on Flixster are listed at the bottom of your collection page.</string>
    <string name="uv_unfulfillable_footer">We are working to make these titles available directly through Flixster as soon as possible, and apologize for any inconvenience.</string>
    <string name="tickets_promo_header">Get the Flixster App for Movie\nTickets &amp; Showtimes</string>
    <string name="tickets_promo_text1">You have the Flixster Video App, now get the Flixster App for Movie Tickets &amp; Showtimes</string>
    <string name="tickets_promo_text2">Download the free Flixster App to your Android phone or tablet on Google Play</string>
</resources>