<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menuHome"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/menu_home"
        android:titleCondensed="@string/menu_home"/>
    <item
        android:id="@+id/menuActor"
        android:icon="@drawable/ic_menu_actor"
        android:title="@string/menu_actor"
        android:titleCondensed="@string/menu_actor"
        android:visible="false"/>
    <item
        android:id="@+id/menuMovie"
        android:icon="@drawable/ic_menu_movie"
        android:title="@string/menu_movie"
        android:titleCondensed="@string/menu_movie"
        android:visible="false"/>
    <item
        android:id="@+id/menuInfo"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/menu_info"
        android:titleCondensed="@string/menu_info"/>
    <item
        android:id="@+id/menuShare"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/menu_share"
        android:titleCondensed="@string/menu_share"/>
    <item
        android:id="@+id/menuSave"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/menu_save"
        android:titleCondensed="@string/menu_save"/>

</menu>