<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        style="@style/header_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/topbar"
        android:padding="@dimen/topbar_pad"
        android:text="@string/select_friends_title" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_normal"
        android:text="@string/select_friends_description"
        android:textAppearance="@style/subtitle" />

    <ImageView
        android:id="@+id/friend_select_add_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_menu_invite" />

    <ProgressBar
        android:id="@+id/throbber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <ListView
        android:id="@+id/android:list"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:choiceMode="multipleChoice" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/topbar"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/friend_select_selected"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/spacing_normal"
            android:text="@string/select_friends_movies"
            android:textAppearance="@style/header_text" />

        <TextView
            android:id="@+id/friend_select_more"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/select_friends_more"
            android:textAppearance="@style/header_text" />

        <ImageView
            android:id="@+id/friend_select_invite"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_normal"
            android:src="@drawable/sendinvites" />
    </LinearLayout>

</LinearLayout>