<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/transparent_dialog_width"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical" >

	<LinearLayout
	    android:id="@+id/uv_promo_layout"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_margin="@dimen/spacing_large"
	    android:padding="@dimen/spacing_large"
	    android:background="@drawable/bg_uv_promo_white"
	    android:orientation="vertical" >
		
        
        <TextView
            android:id="@+id/textView_uv_promo_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/spacing_large"
            android:paddingBottom="@dimen/spacing_normal"
            android:textAppearance="@style/TextMediumBold"
            android:text="@string/uv_unfulfillable_header" />
        
        <TextView
            android:id="@+id/textView_uv_promo_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/spacing_large"
            android:textAppearance="@style/TextSmall"
            android:text="@string/uv_unfulfillable_body" />

        <TextView
            android:id="@+id/textView_uv_promo_footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/spacing_large"
            android:textAppearance="@style/TextSmall"
            android:text="@string/uv_unfulfillable_footer" />
        
	</LinearLayout>
	
	<ImageView
	    android:id="@+id/imageView_uv_promo_close"
	    android:layout_width="@dimen/uv_promo_dialog_close_button_width"
	    android:layout_height="@dimen/uv_promo_dialog_close_button_width"
	    android:layout_alignParentRight="true"
	    android:layout_alignParentTop="true"
	    android:scaleType="fitXY"
	    android:src="@drawable/uv_blue_close" />
		
</RelativeLayout>