<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/landing_page_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_inactive"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
	    android:gravity="center"
        android:orientation="vertical" >
        
		<TextView
		    android:id="@+id/textView_promo_title"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:paddingTop="10dp"
		    android:textAppearance="@style/TextLarge"
		    android:textColor="@color/subtitle_grey"
		    android:gravity="center"
		    android:text="@string/tickets_promo_header" />

		<TextView
		    android:id="@+id/textView_promo_text1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:paddingTop="5dp"
		    android:paddingBottom="5dp"
		    android:paddingLeft="10dp"
		    android:paddingRight="10dp"
		    android:textAppearance="@style/TextSmall"
		    android:textColor="@color/subtitle_grey"
		    android:gravity="center"
		    android:text="@string/tickets_promo_text1" />
								
		<TextView
		    android:id="@+id/textView_promo_text2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:paddingTop="5dp"
		    android:paddingBottom="5dp"
		    android:paddingLeft="10dp"
		    android:paddingRight="10dp"
		    android:textAppearance="@style/TextSmaller"
		    android:textColor="@color/flixster_video_blue"
		    android:gravity="center"
		    android:text="@string/tickets_promo_text2" />
		
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:paddingTop="10dp"
				android:paddingBottom="10dp"
				android:orientation="horizontal" >
	
				<ImageView
					android:id="@+id/button_google_play"
					android:src="@drawable/google_play_badge_60"
					android:layout_width="120dp"
					android:layout_height="41dp"
					android:scaleType="fitCenter"
					android:textColor="@color/white" />
		    </LinearLayout>
	    
	</LinearLayout>
    		    
</RelativeLayout>