<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:orientation="vertical" >
    
	<RelativeLayout
	    android:id="@+id/uv_promo_layout"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:gravity="center"
	    android:padding="@dimen/spacing_small"
		android:background="@drawable/bg_collection_uv_promo"
	    android:orientation="vertical" >
        
        <TextView
            android:id="@+id/textView_uv_promo_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/spacing_small"
            android:textAppearance="@style/TextXSmallBold"
            android:textColor="@color/uv_purple_dark"
            android:text="@string/uv_promo_header" />
        
		<ImageView
		    android:id="@+id/imageView_uv_promo_logo"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/textView_uv_promo_header"
		    android:scaleType="fitCenter"
            android:gravity="center"
            android:paddingBottom="@dimen/spacing_xsmall"
		    android:src="@drawable/digital_uv_logo"
		    android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/textView_uv_promo_footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
		    android:layout_below="@id/imageView_uv_promo_logo"
            android:gravity="center"
            android:paddingBottom="@dimen/spacing_normal"
            android:textAppearance="@style/TextXSmallBold"
            android:text="@string/uv_promo_footer" />
        
        <LinearLayout
            android:id="@+id/uv_promo_button_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
		    android:layout_below="@id/textView_uv_promo_footer"
            android:weightSum="4"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/spacing_small" >
	        <Button
	            android:id="@+id/button_uv_promo"
	            android:layout_width="0dp"
	            android:layout_weight="3"
	            android:layout_height="wrap_content"
	            android:background="@drawable/uv_purple_button"
	            android:padding="@dimen/spacing_normal"
	            android:textColor="@color/white"
	            android:textAppearance="@style/TextXSmallBold"
	            android:text="@string/redeem_redeemBtn" />
        </LinearLayout>
	</RelativeLayout>
</RelativeLayout>