<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <com.google.ads.interactivemedia.demoapp.player.TrackingVideoView
        android:id="@+id/surface_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerInParent="true" />

    <ImageView
        android:id="@+id/trailer_backgroundad"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <!-- DFP Video label buttons -->

    <TextView
        android:id="@+id/ad_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/ad_label_bg"
        android:paddingLeft="@dimen/spacing_small"
        android:paddingRight="@dimen/spacing_small"
        android:text="@string/advertisement"
        android:textAppearance="@style/TextSmall"
        android:textColor="@color/white"
        android:visibility="gone" />

    <TextView
        android:id="@+id/ad_visit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/spacing_small"
        android:background="@drawable/ad_skip_button_bg"
        android:drawablePadding="1dp"
        android:drawableTop="@drawable/global"
        android:gravity="center_horizontal"
        android:paddingBottom="1dp"
        android:paddingLeft="@dimen/spacing_large"
        android:paddingRight="@dimen/spacing_large"
        android:paddingTop="@dimen/spacing_small"
        android:text="@string/visit"
        android:textAppearance="@style/TextSmall"
        android:textColor="@color/white"
        android:visibility="gone" />

    <TextView
        android:id="@+id/ad_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/spacing_small"
        android:background="@drawable/ad_skip_button_bg"
        android:drawablePadding="1dp"
        android:drawableTop="@drawable/skip_arrow"
        android:gravity="center_horizontal"
        android:paddingBottom="1dp"
        android:paddingLeft="@dimen/spacing_large"
        android:paddingRight="@dimen/spacing_large"
        android:paddingTop="@dimen/spacing_small"
        android:text="@string/skip"
        android:textAppearance="@style/TextSmall"
        android:textColor="@color/white"
        android:visibility="gone" />

    <!-- Loading -->

    <ProgressBar
        android:id="@+id/throbber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>